# codelink

./: AGENT.md  AGENTS.md  NOTICE  README.md
.github/workflows/: rust-release.yml  rusty-v8-release.yml
codex-rs/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/codelink/: Cargo.toml
codex-rs/codelink/src/: lib.rs  main.rs
codex-rs/core/src/: client.rs  client_tests.rs  codelink_instructions.rs  lib.rs
codex-rs/core/src/context/: image_generation_instructions.rs
codex-rs/core/src/context_manager/: context_pruner.rs  history.rs  history_tests.rs  mod.rs
codex-rs/core/src/session/: mod.rs  turn.rs
codex-rs/core/src/tools/: spec.rs
codex-rs/core/src/tools/handlers/: compress.rs  mod.rs  view_image.rs
codex-rs/core/tests/suite/: client.rs  code_mode.rs  view_image.rs
codex-rs/tools/src/: context_tool.rs  lib.rs  tool_registry_plan.rs  tool_registry_plan_tests.rs  tool_registry_plan_types.rs  tool_spec.rs  tool_spec_tests.rs  view_image.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs
codex-rs/tui/src/app/: background_requests.rs  event_dispatch.rs  tests.rs
codex-rs/tui/src/chatwidget/: status_surfaces.rs
codex-rs/tui/src/chatwidget/tests/: composer_submission.rs  helpers.rs
docs/: codelink-background-agents.md  context-pruner.md
