[package]
name = "codex-codelink"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_codelink"
path = "src/lib.rs"

[[bin]]
name = "codelink-jobs"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
regex-lite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "time",
] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
